--- a/Frontend-Vuetify/package.json
+++ b/Frontend-Vuetify/package.json
@@ -23,13 +23,12 @@
     "lodash": "^4.17.21",
     "remixicon": "^4.2.0",
     "roboto-fontface": "*",
-    "router": "^1.3.8",
-    "sweetalert2": "^11.10.8",
+    "router": "^2.0.0",
+    "sass-loader": "^10.5.2",
+    "sweetalert2": "^11.15.10",
     "vue": "^3.2.0",
-    "vue-jwt-decode": "^0.1.0",
     "vue-multiselect": "^3.0.0",
     "vue-router": "^4.0.0",
-    "vue-star-rating": "^1.7.0",
     "vue-toastification": "^2.0.0-rc.5",
     "vue3-datepicker": "^0.4.0",
     "vue3-perfect-scrollbar": "^2.0.0",
@@ -43,11 +42,11 @@
     "@vue/eslint-config-typescript": "^11.0.0",
     "eslint": "^8.56.0",
     "eslint-plugin-vue": "^9.21.1",
-    "sass": "^1.60.0",
+    "sass": "^1.83.4",
     "typescript": "^5.0.0",
     "unplugin-fonts": "^1.0.3",
     "vite": "^4.2.0",
     "vite-plugin-vuetify": "^1.0.0",
-    "vue-tsc": "^1.2.0"
+    "vue-tsc": "^2.2.0"
   }
 }
